Add support for non-default external postgres port in the sentry chart
Signed-off-by: Matthew Law <mjl@corefiling.com>

--- a/stable/sentry/values.yaml
+++ b/stable/sentry/values.yaml
@@ -146,6 +146,7 @@ postgresql:
   # Only used when internal PG is disabled
   # postgresHost: postgres
   # postgresPassword: postgres
+  # postgresPort: 5432
   imageTag: "9.6"
   persistence:
     enabled: true
