--- a/stable/sentry/templates/hooks/db-init.job.yaml
+++ b/stable/sentry/templates/hooks/db-init.job.yaml
@@ -52,7 +52,7 @@ spec:
         - name: SENTRY_POSTGRES_HOST
           value: {{ template "postgresql.host" . }}
         - name: SENTRY_POSTGRES_PORT
-          value: "5432"
+          value: {{ template "postgresql.port" . }}
         - name: SENTRY_REDIS_PASSWORD
           valueFrom:
             secretKeyRef:
